force-app/main/default/objects/CampaignMember/fields/Held_out_of_Lead_Communications_OLD__c.field-meta.xml
<CustomField>
    <fullName>Held_out_of_Lead_Communications_OLD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Held out of Lead Communications_old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>