force-app/main/default/objects/CampaignMember/fields/Lead_Creation_Offer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Offer__c</fullName>
    <formula>IF( NOT(ISBLANK(ContactId)), Contact.Lead_Creation_Offer__c, 
IF(NOT(ISBLANK(LeadId)), Lead.Lead_Creation_Offer__c,&quot;&quot;) 
)</formula>
    <label>Lead Creation Offer</label>
    <type>Text</type>
</CustomField>