force-app/main/default/objects/CampaignMember/fields/Member_First_Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_First_Responded_Date__c</fullName>
    <label>Member First Responded Date</label>
    <type>Date</type>
</CustomField>