force-app/main/default/objects/CampaignMember/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <formula>IF( NOT(ISBLANK(ContactId)), Contact.Account.Number_of_Active_Employees__c,
     IF(NOT(ISBLANK(LeadId)), Lead.NumberOfEmployees_Lead__c,444)
)</formula>
    <label>NumberOfEmployees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>