force-app/main/default/objects/CampaignMember/fields/Old_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Owner_Email__c</fullName>
    <formula>Contact.Account.Account_old_owner_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Account Owner - Email</label>
    <type>Text</type>
</CustomField>