force-app/main/default/objects/CampaignMember/fields/On_Campaign_Member_Create_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>On_Campaign_Member_Create_Lead_Status__c</fullName>
    <description>Lead status at time of Campaign member creation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>On Campaign Member Create: Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>