force-app/main/default/objects/CampaignMember/fields/P2P_Referrer__c.field-meta.xml
<CustomField>
    <fullName>P2P_Referrer__c</fullName>
    <description>Partner Account that referred this reseller campaign member</description>
    <formula>IF(
NOT(ISBLANK(ContactId)), Contact.P2P_Referrer__r.Name ,
IF(
NOT(ISBLANK(LeadId)), Lead.P2P_Referrer__r.Name ,&apos;&apos;
)
)</formula>
    <label>P2P Referrer</label>
    <type>Text</type>
</CustomField>