force-app/main/default/objects/CampaignMember/fields/Recent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Recent_Campaign__c</fullName>
    <description>Value obtained Recent Campaign on Lead or Contact</description>
    <label>Recent Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>