force-app/main/default/objects/CampaignMember/fields/Recent_Content__c.field-meta.xml
<CustomField>
    <fullName>Recent_Content__c</fullName>
    <description>Value obtained Recent Content on Lead or Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recent Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>