force-app/main/default/objects/CampaignMember/fields/Recent_Source__c.field-meta.xml
<CustomField>
    <fullName>Recent_Source__c</fullName>
    <description>Value obtained Recent Source on Lead or Contact</description>
    <label>Recent Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>