force-app/main/default/objects/CampaignMember/fields/Visitor_ID__c.field-meta.xml
<CustomField>
    <fullName>Visitor_ID__c</fullName>
    <label>Visitor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>